# taylor

./: Cargo.toml  Makefile  README.md  README.org
src/: checks.rs  lib.rs  tests.rs
taylor-bin/: Cargo.toml
taylor-bin/src/: main.rs
