[package]
name = "taylor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symm = { git = "https://github.com/ntBre/symm" }
nalgebra = "0.32.3"
rust-anpass = { git = "https://github.com/ntBre/rust-anpass" }
serde = "1.0.196"

[workspace]
members = [
"taylor-bin"
]
