[package]
name = "taylor-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
intder = { path = "/home/brent/Projects/intder" }
symm = { path = "/home/brent/Projects/symm" }
taylor = { path = ".." }
