[package]
name = "taylor-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
intder = { git = "https://github.com/ntBre/intder" }
symm = { git = "https://github.com/ntBre/symm" }
taylor = { path = ".." }
